--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -3,13 +3,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <TextView
+    <ImageView
+        android:id="@+id/ivPicture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:padding="@dimen/padding_medium"
-        android:text="@string/hello_world"
-        tools:context=".MainActivity" />
+        android:contentDescription="@string/display_s_the_users_image_selection"
+        android:src="@android:drawable/alert_dark_frame" />
+
+    <Button
+        android:id="@+id/bGetPicture"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:text="@string/get_your_picture" />
 
 </RelativeLayout>
