--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -15,19 +15,39 @@
         android:id="@+id/ivComplement"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="67dp"
+        android:layout_marginRight="58dp"
         android:src="@android:drawable/alert_dark_frame" />
 
     <ImageView
         android:id="@+id/ivPicture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignTop="@+id/ivComplement"
-        android:layout_marginRight="55dp"
+        android:layout_marginLeft="67dp"
         android:contentDescription="@string/display_s_the_users_image_selection"
         android:src="@android:drawable/alert_dark_frame" />
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/ivPicture"
+        android:layout_below="@+id/ivPicture"
+        android:text="Original"
+        android:textAppearance="?android:attr/textAppearanceSmall" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/textView1"
+        android:layout_alignBottom="@+id/textView1"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="42dp"
+        android:text="Complement"
+        android:textAppearance="?android:attr/textAppearanceSmall" />
 
 </RelativeLayout>
